--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,3 +33,12 @@ theme_branch:
   except:
     - master
 # }}}
+
+build_and_deploy:
+  image: registry.gitlab.com/jamietanna/jvt.me/hugo-base:0.68.3
+  stage: build
+  script:
+    - hugo --verbose --minify --production
+    - hugo-official deploy
+  only:
+    - master
