Override entrypoint from `hugo-base` image
The Hugo base image I've got sets the `entrypoint` to be `hugo`, which
means we can't do what we actually want in the image, i.e. run commands
from it.

Instead, if we set it to be an empty string, this will override it for
us[0].

[0]: https://forum.gitlab.com/t/how-to-override-entrypoint-in-gitlab-ci-yml/9429/3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,9 @@ theme_branch:
 # }}}
 
 build_and_deploy:
-  image: registry.gitlab.com/jamietanna/jvt.me/hugo-base:0.68.3
+  image:
+    name: registry.gitlab.com/jamietanna/jvt.me/hugo-base:0.68.3
+    entrypoint: ['']
   stage: build
   script:
     - hugo --verbose --minify --production
