--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ build_and_deploy:
     entrypoint: ['']
   stage: build
   script:
-    - hugo --verbose --minify --production
+    - hugo --verbose --minify
     - hugo-official deploy
   only:
     - master
