Add verbose logging for S3 uploads
To better understand what's happening, and to inform the decision about
enabling the deletion flag, I want to be able to see a bit more about
what's being uploaded/deleted.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,6 @@ build_and_deploy:
   stage: build
   script:
     - hugo-official --verbose --minify
-    - hugo-official deploy
+    - hugo-official deploy --log --verbose
   only:
     - master
