--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,12 +35,11 @@ theme_branch:
 # }}}
 
 build_and_deploy:
-  image:
-    name: registry.gitlab.com/jamietanna/jvt.me/hugo-base:0.68.3
-    entrypoint: ['']
   stage: build
+  tags:
+    - shell
   script:
-    - hugo-official --verbose --minify
-    - hugo-official deploy --log --verbose
+    - hugo --verbose --minify
+    - hugo deploy --log --verbose
   only:
     - master
