--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,6 @@ build_and_deploy:
     - shell
   script:
     - hugo --verbose --minify
-    - hugo deploy --log --verbose
+    - hugo deploy --log --verbose --delete -1
   only:
     - master
