--- a/Dockerfile.hugo-base
+++ b/Dockerfile.hugo-base
@@ -1,4 +1,4 @@
-FROM klakegg/hugo:0.68.3-ext-alpine
+fROM klakegg/hugo:0.80.0-ext-alpine
 MAINTAINER Jamie Tanna <docker@jamietanna.co.uk>
 LABEL me.jvt.www.image-name=hugo-base
 LABEL me.jvt.www.version=0.68.3
