--- a/config.toml
+++ b/config.toml
@@ -29,6 +29,7 @@ paginate = 50
   MicroPubEndpoint = "https://www-api.jvt.me/micropub"
   ShowInMainFeed = ["articles", "bookmarks", "notes", "photos", "reposts", "rsvps"]
   IgnoreInFeeds = ["", "contacts", "projects", "talks"]
+  MaxRssItems = 100
 [[params.redirect]]
 from = "/tags/archlinux/"
 to = "/tags/arch-linux/"
