Reduce size of JSON feed
To improve speed of shipping, add configuration for the maximum number
of items in a JSON feed, for both size reduction, and to prevent
readers' readers not being happy with the size of them - especially as
it's currently ~20MB!

--- a/config.toml
+++ b/config.toml
@@ -30,6 +30,7 @@ paginate = 50
   ShowInMainFeed = ["articles", "bookmarks", "notes", "photos", "reposts", "rsvps"]
   IgnoreInFeeds = ["", "contacts", "projects", "talks"]
   MaxRssItems = 100
+  MaxJsonFeedItems = 100
 [[params.redirect]]
 from = "/tags/archlinux/"
 to = "/tags/arch-linux/"
