Increase debug logging to maximum
To make it possible to further diagnose what files are needing to change
each time in a deploy, we can increase our logging to the highest level.

This will only be available temporarily.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,6 @@ build_and_deploy:
     - shell
   script:
     - hugo --verbose --minify
-    - hugo deploy --log --verbose --maxDeletes -1
+    - hugo deploy --log --verbose --verboseLog --debug --maxDeletes -1
   only:
     - master
